Update Operations.java